cmake_minimum_required(VERSION 3.0.0)
add_definitions(-std=c++11)
set(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} "-pthread -lrpc_sql -std=c++11 -ljson -lcurl")
project(demo)
set(CUSTOM_INC /home/tommenx/demo/include)
set(RPC_LIB /home/tommenx/share/rpclib/build/librpc.a)
set(JSON_LIB /home/tommenx/download/jsoncpp-src-0.5.0/libs/linux-gcc-5.4.0/libjson.a)
set(CURL_LIB /home/tommenx/share/rpclib/build/libcurl.a)
#set(RPC_SQL_LIB /home/tommenx/share/demo/build/librpc_sql.a)
link_directories(/home/tommenx/demo/lib/)
include_directories(${CUSTOM_INC})
add_executable(client rpc_server.cpp rpc_sql.cpp local_sql.cpp  parser.cpp sql_exec.cpp metadata.cpp query_tree_with_fragment.cpp main.cpp)
target_link_libraries(client libmysqlcppconn.so ${RPC_LIB} ${JSON_LIB} ${CURL_LIB}) 
