cmake_minimum_required(VERSION 3.12)
project(ddbDemo)

set(CMAKE_CXX_STANDARD 14)
#set(CMAKE_EXE_LINKER_FLAGS -lmysqlcppconn)
#set(ENV_LIB_PATHS ENV DYLD_LIBRARY_PATH )
set(INC_DIR /Users/tommenx/Documents/rpclib/include /Users/tommenx/Documents/mysql-connector/include/jdbc)
set(RPC_LIB /Users/tommenx/Documents/rpclib/build/librpc.a)
set(SQL_LIB_DIR /Users/tommenx/Documents/mysql-connector/lib64)
set(SQL_LIBS ${SQL_LIB_DIR}/libmysqlcppconn.7.dylib)
message(${SQL_LIBS})
#set(LIN_DIR /Users/tommenx/Documents/mysql-connector/lib64)
#link_directories(${LIN_DIR})
include_directories(${INC_DIR})
add_executable(server main.cpp rpc_server.cpp local_sql.cpp)
target_link_libraries(server ${SQL_LIBS} ${RPC_LIB})