#client Cmake
#cmake_minimum_required(VERSION 3.0.0)
#add_definitions(-std=c++11)
#set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pthread -lrpc")
#project(demo)
#set(CUSTOM_INC /home/tommenx/demo/include)
#set(RPC_LIB /home/tommenx/share/rpclib/build/librpc.a)
#link_directories(/home/tommenx/demo/lib/)
#include_directories(${CUSTOM_INC})
#add_executable(client local_sql.cpp rpc_sql.cpp rpc_client_test.cpp)
#target_link_libraries(client libmysqlcppconn.so ${RPC_LIB})

#server cmakelist
cmake_minimum_required(VERSION 3.0.0)
add_definitions(-std=c++11)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pthread -lrpc -lrpc_sql")
project(demo)
set(CUSTOM_INC /home/tommenx/demo/include)
set(RPC_LIB /home/tommenx/share/rpclib/build/librpc.a)
link_directories(/home/tommenx/demo/lib/)
include_directories(${CUSTOM_INC})
add_library(rpc_sql local_sql.cpp rpc_server.cpp rpc_sql.cpp)
add_executable(demo local_sql.cpp rpc_server.cpp rpc_server_test.cpp)
target_link_libraries(demo libmysqlcppconn.so ${RPC_LIB})